--- a/BBets.Rmd
+++ b/BBets.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Brownlows Bets"
-author: "Your Name Goes Here"
+author: "Jason Briseno"
 output: 
   html_document:
     number_sections: true
@@ -14,7 +14,7 @@ knitr::opts_chunk$set(echo = TRUE)
 require(tidyverse)
 require(tigerstats)
 require(knitr)
-source(file="BrLw.R")
+source(file="payoffFunction-2.R")
 ```
 
 
@@ -25,6 +25,29 @@ source(file="BrLw.R")
 <!--In this section you explain what you are trying to show.  Where did the data come from?  What is the research or other question you are trying to answer?!-->
 
  At the first day of class there are 35 students in Math Statistics class and professor Brownlow always proposes this bet to his students "I will wager $2 to your bet of $1 that at least two people in today's class have  the same birthday.  He tells me he has made that bet 637 times so far. Where do you think his profits are? Discuss this in a markdown document
+ 
+```{r}
+money=vector("numeric",0)
+for(i in c(1:1000)){
+  money[i]=(profit(35,2,637))
+}
+```
+ 
+ 
+```{r}
+hist(money)
+```
+ 
+ 
+ Dr. Js profits are between 200 - 350.
+ 
+```{r}
+moneysorted=sort(money)
+lci=moneysorted[26]
+uci=moneysorted[974]
+```
+ 
+ 
  
 Report git commit structure:
 There are 3 questions and there should be at least 3 separate commits, at least one dealing with each of the 3 questions.
@@ -37,14 +60,44 @@ There are 3 questions and there should be at least 3 separate commits, at least 
 The function will be given a class_size by number of students, odds, and Number_of_times brownlow made the bet.  It will give you back how much Brownlows earnings were. We will use it to answer our three questions below. If you can, improve this function by giving default values to some of its inputs. 
 
 # In the class and payoff as described  If you highered 40 brownlow substitute teachers to do the same thing that Brownlow did then.
-## what is their average earnings
+
+
+## what is their average earnings? 
+
+```{r}
+money=vector("numeric",0)
+for(i in c(1:40)){
+  money[i]=(profit(35,2,637))
+}
+```
+
+```{r}
+t.test(money)
+print(sd(money))
+```
+
+
 ## the standard deviation and a 95% confidence interval for their earnings?
+  
+  The 95% confidence interval for earnings is 'r lci' to 'r uci'
+  
+  The standard deviation is 29.10829
   
 <!--Explain and display your method of coming up with a 95% confidence interval of  professor Brownlows winnings (or losings)-->
 
 
 # What are the fair odds? Use manipulation of odds in the function to tune Brownlows earnings to zero. 
 
+```{r}
+money=vector("numeric",0)
+
+for(i in c(1:200)){
+  money[i]=(profit(35,4.5,637))
+}
+hist(money)
+```
+
+We chose random values for pay off odds until we got a histogram to center at 0. I started off with 1 which was too low, so we tried 5 which was closer to 0 but still to high. we went down to 4 which lead us to 4.5 which was the best pick. A manipulation of the odds variable to class size of 35 with an odds ratio of 4.5:1; that profits for Dr. J showed zero.
 
 <!--Decide on your methods:  In this section explain the approach you will take to attack the issue --- how will you decide on a likely estimate of professor Brownlow's earnings or losses after 637 bets. Also explain how you construct a 95% confidence interval about your estimate of his winnings !-->
 
@@ -52,6 +105,16 @@ The function will be given a class_size by number of students, odds, and Number_
 
 
 # What size of class makes the 2:1 bet fair?  Use manipulation of number of Students to tune Brownlows earnings to zero.
+
+```{r}
+money=vector("numeric",0)
+for(i in c(1:1000)){
+  money[i]=(profit(29,2,637))
+}
+hist(money)
+```
+
+We started with 35 which was too high, then we tried 37, then we tried 29 which was too high, then 28 which was too low, so we settled on 28 between 29 which we were pretty similar and both would be acceptable answers. So we went with 29 students with the bet being 2:1 which was close profit for Dr. J.
 
 <!--Explain and display the results of your method of coming up with the estimate of professor Brownlows betting profits!-->
 
@@ -65,4 +128,8 @@ The function will be given a class_size by number of students, odds, and Number_
 # Discussion and Conclusion
 
 <!--Discussion and conclusion here.  If professor Brownlow is consistantly making or losing money how could he change his payout so that his profits center on zero?  Also discuss what size his class should be in order to have his current scheme balance at zero profit.!-->
+
+At the beginning Dr. J was making about 200$ dollars of profit with the class size of 35, with 2:1 odds when guessing that there would be atleast 2 students with the same birthday. When changing the odds pay from 4.5:1 we got the payout for Dr. J down to about 0 dollars profit.
+
+We then changed the class size from 35 to either 28 or 29 students at 2:1 odds and we got the same results, Dr. J's profits were closer to 0.
 
